[tool.poetry]
name = "whistling"
version = "0.1.0"
description = "A collection of functions to report a malicious URL"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.16.1"
contextvars = "^2.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coveralls = "^2.2.0"
environs = "^9.2.0"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest = "^6.2.0"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"
vcrpy = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
